# cleanApp

./: README.md  main.py  pyproject.toml
core/: settings.py
src/: container.py
src/application/use_cases/: create_order.py
src/domain/: entities.py  enums.py  repositories.py
src/infrastructure/: apps.py  mappers.py  models.py  repositories.py
