[project]
name = "cleanapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-tailwind>=4.4.2",
    "django-tailwind-cli>=4.5.1",
    "djangorestframework>=3.16.1",
    "psycopg[binary]>=3.3.2",
    "python-decouple>=3.8",
]
